<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".KoalaDetailFragment">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/koala_title_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:textAllCaps="false" />

    <EditText
        android:id="@+id/koala_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/koala_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/place_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/place_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_title_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:textAllCaps="false" />

    <EditText
        android:id="@+id/place_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_detail_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/koala_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_text"
        app:layout_constraintVertical_bias="0.073"
        tools:text="Wed May 11 11:56 EST 2022" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koala_date"
        app:layout_constraintVertical_bias="0.108">

        <TextView
            android:id="@+id/gps_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:text="@string/gps_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:fontFamily="serif-monospace" />

        <Button
            android:id="@+id/show_gps"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/show_gps"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="390dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:layout_width="353dp"
        android:layout_height="135dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.097">


        <ImageView
            android:id="@+id/koala_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/black"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/koala_camera"
            android:layout_width="89dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_camera"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <Button
        android:id="@+id/share_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="150dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="32dp"
        android:minHeight="48dp"
        android:text="@string/share_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/delete_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="32dp"
        android:minHeight="48dp"
        android:text="@string/delete_item_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>